--- a/Styles/Main.css
+++ b/Styles/Main.css
@@ -16,7 +16,8 @@ body {
 .container {
   display: grid;
   grid-template-columns: auto;
-  grid-template-rows:  14.3rem 15.9rem 16.0rem 19.0rem;
+  grid-template-rows:  14.3rem 14.5rem 14.5rem 19.0rem;
+  grid-row-gap: 1.3rem;
 }
 
 /* ----------------------- MOBILE NAV BAR -------------------------*/
@@ -118,8 +119,6 @@ article{
 
 .image-feathers{
   height: auto;
-  position: absolute;
-  opacity: 0.8;
   width: 100%;
 }
 
@@ -142,9 +141,6 @@ article{
 
 /* ----------------------- MY STORY SECTION HOME PAGE-------------------------*/
 
-.my-journey{
-  margin-top: 1.3rem;
-}
 
 .journey-image{
   height: auto;
@@ -164,7 +160,6 @@ article{
   padding: 5.5rem 1.5rem;
   position: absolute;
   text-align: center;
-  width: 16.3rem;
 }
 
 .My-Life-Button{
@@ -175,8 +170,7 @@ article{
   cursor: pointer;
   font-family: Raleway;
   font-size: 12px;
-  left: 4.7rem;
-  margin-top: 26%;
+  margin: 26% 0 0 12.5%;
   padding: 1rem 1.5rem;
   position: absolute;
   text-align: center;
@@ -186,9 +180,7 @@ article{
 
 /* ----------------------- SAVE SAFE SECTION HOME PAGE-------------------------*/
 
-.Save-Safe{
-  margin-top: 1.3rem;
-}
+
 
 .Save-Safe-Image{
   height: auto;
@@ -217,7 +209,6 @@ article{
   font-size: 12px;
   padding: 7.4rem 0 0 19rem;
   position: absolute;
-  width: 44%;
 }
 
 .Prototype-Button{
@@ -228,7 +219,7 @@ article{
   cursor: pointer;
   font-family: Raleway;
   font-size: 12px;
-  margin: 26% 0 0 45%;
+  margin: 26% 0 0 42%;
   padding: 1rem 1.5rem;
   position: absolute;
   text-align: center;
@@ -244,7 +235,7 @@ article{
   cursor: pointer;
   font-family: Raleway;
   font-size: 12px;
-  margin: 26% 1.5rem 0 73%;
+  margin: 26% 1.5rem 0 71%;
   padding: 1rem 1.5rem;
   position: absolute;
   text-align: center;
@@ -265,7 +256,7 @@ article{
   color: #000000;
   cursor: pointer;
   font-size: 12px;
-  padding: 0 27%;
+  padding: 0 26%;
   text-decoration: none;
 }
 
@@ -305,13 +296,255 @@ article{
 
 .footer{
   background-color: #97B7CC;
-  margin-top: 1.3rem;
 }
 
 .lets-talk-links{
   position: absolute;
   width: 100%;
 }
+/*
+  ##Device = Tablets, Ipads (portrait)
+  ##Screen = B/w 768px to 1024px
+*/
+@media only screen and (min-width: 768px){
+  .container {
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows:  29rem 29.7rem 29.7rem 32rem;
+    grid-row-gap: 3rem;
+
+  }
+  /* ----------------------- HOME PAGE-------------------------*/
+  /* -----------------------HERO SECTION -------------------------*/
+
+
+  .logo{
+    height: 40px;
+  }
+
+  .hero h1{
+    font-size: 40px;
+    line-height: 5rem;
+    padding: 6% 0 0 0;
+      width: 100%;
+  }
+
+  .hero h2{
+    font-size: 20px;
+    line-height: 3rem;
+    padding: 18rem 0 0 0;
+      width: 100%;
+
+  }
+
+  /* ----------------------- MY STORY SECTION HOME PAGE-------------------------*/
+
+  .my-journey h2{
+    font-size: 30px;
+    padding: 6% 0 0 9.5%;
+  }
+
+  .my-journey p{
+    font-size: 20px;
+    line-height: 3rem;
+    padding: 12rem 0 0 8rem;
+  }
+
+  .My-Life-Button{
+    font-size: 20px;
+    margin: 22% 0 0 14.5%;
+    padding:1.5rem;
+    width: 11rem;
+  }
+
+  /* ----------------------- SAVE SAFE SECTION HOME PAGE-------------------------*/
+
+  .Save-Safe h2{
+    font-size: 30px;
+    padding: 5rem 0 0 50rem;
+  }
+
+  .Save-Safe p{
+    font-size: 20px;
+    line-height: 3rem;
+    padding: 10rem 0 0 40rem;
+  }
+
+  .Save-Safe h3{
+    font-size: 20px;
+    padding: 17rem 0 0 42.5rem;
+  }
+
+  .Prototype-Button{
+    font-size: 20px;
+    margin: 28% 0 0 52%;
+    padding:1.5rem;
+    width: 11rem;
+  }
+
+  .Case-Study-Button{
+    font-size: 20px;
+    margin: 28% 0 0 76%;
+    padding:1.5rem;
+    width: 11rem;
+  }
+
+  /* ----------------------- BOTTOM CONTACT SECTION HOME PAGE -------------------------*/
+
+  .lets-talk-links h1{
+    font-size: 30px;
+    padding: 5rem 30.6rem;
+    width: 14rem;
+  }
+
+  .email-link{
+    font-size: 20px;
+    padding: 0 28%;
+    }
+
+  .linkedin-link{
+    font: normal normal normal 50px/1 FontAwesome;
+    top:18rem;
+  }
+
+  .github-link{
+    font: normal normal normal 50px/1 FontAwesome;
+    top: 18rem;
+
+  }
+
+  .facebook-link{
+    font: normal normal normal 50px/1 FontAwesome;
+    top: 18rem;
+  }
+
+  .twittier-link{
+    font: normal normal normal 50px/1 FontAwesome;
+    top: 18rem;
+  }
+
+
+/*
+  ##Device = Laptops, Desktops
+  ##Screen = B/w 1025px to 1280px
+*/
+@media only screen and (min-width: 1025px){
+  .container {
+    display: flex
+    flex-direction: row;
+    grid-template-columns: auto;
+    grid-template-rows:  38.8rem 39.5rem 39.6rem 39rem;
+    grid-row-gap: 3.5rem;
+}
+    /* ----------------------- HOME PAGE-------------------------*/
+    /* -----------------------HERO SECTION -------------------------*/
+
+
+
+    #mobile-header-img-container{
+      height: 5rem;
+      }
+
+    #menu-icon{
+      display: none;
+    }
+
+    .logo{
+      height: 69px;
+    }
+
+    .hero h1{
+      font-size: 60px;
+      line-height: 8rem;
+      padding: 6% 0 0 0;
+      width: 100%;
+    }
+
+    .hero h2{
+      padding: 26% 0 0 0;
+      width: 100%;
+    }
+
+    /* ----------------------- MY STORY SECTION HOME PAGE-------------------------*/
+
+
+    .my-journey h2{
+      font-size: 50px;
+      padding: 5% 0 0 3%;
+    }
+
+    .my-journey p{
+      font-size: 25px;
+padding-top: 15%;
+    }
+
+    .My-Life-Button{
+      font-size: 25px;
+      width: 15rem;
+    }
+
+    /* ----------------------- SAVE SAFE SECTION HOME PAGE-------------------------*/
+
+
+    .Save-Safe h2{
+      font-size: 50px;
+      padding-left: 65%;
+}
+
+    .Save-Safe p{
+      font-size: 25px;
+      padding: 12% 0 0 56%;
+    }
+
+    .Save-Safe h3{
+      font-size: 25px;
+      padding: 21% 0 0 60.5%;
+    }
+
+    .Prototype-Button{
+      font-size: 25px;
+      margin: 28% 0 0 58%;
+      width: 15rem;
+    }
+
+    .Case-Study-Button{
+      font-size: 25px;
+      margin: 28% 0 0 78%;
+      width: 15rem;
+    }
+
+    /* ----------------------- BOTTOM CONTACT SECTION HOME PAGE -------------------------*/
+
+
+    .lets-talk-links h1{
+      font-size: 50px;
+      padding: 6% 0 6% 39%;
+      width: 23rem;
+    }
+
+    .email-link{
+      font-size: 30px;
+      }
+
+    .linkedin-link{
+      top:26rem;
+    }
+
+    .github-link{
+      top: 26rem;
+
+    }
+
+    .facebook-link{
+      top: 26rem;
+    }
+
+    .twittier-link{
+      top: 26rem;
+    }
+
+}
+
 
 /* ------------------CASE STUDY FOR SAVE SAFE MOBILE ---------------------------------*/
 
@@ -382,6 +615,8 @@ article{
   position: absolute;
   text-decoration: none;
 }
+
+
 
 /* ------------------ OVERVIEW SECTION ---------------------------------*/
 
