--- a/Styles/Main.css
+++ b/Styles/Main.css
@@ -202,7 +202,7 @@ body {
   background-image:url(../images/SummerAndMe.jpg);
   background-repeat: no-repeat;
   background-size: 100%;
-  border-bottom: 13.5px solid white;
+  border-bottom: 4vw solid white;
   width: 100%;
 }
 
