--- a/Styles/Main.css
+++ b/Styles/Main.css
@@ -279,7 +279,7 @@ body {
   font-size: 2.5vw;
   line-height: 4.3vw;
   position: absolute;
-  right: 26vw;
+  right: 27%;
   text-align: center;
   text-decoration: none;
   -webkit-border-radius: .5vw;
@@ -295,7 +295,7 @@ body {
   font-size: 2.5vw;
   line-height: 4.3vw;
   position: absolute;
-  right: 8vw;
+  right: 7.5%;
   text-align: center;
   text-decoration: none;
   -webkit-border-radius: .5vw;
